<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fond_color"
    tools:context=".MainActivity"
    >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="220dp"
        android:layout_height="160dp"
        android:layout_marginTop="10dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/heladito_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/dancingscript_bold"
        android:text="@string/heladitos"
        android:textAlignment="center"
        android:textColor="@color/color_cafe_texto"
        android:textSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.036">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/iconito_de_email"
                android:src="@drawable/iconemail" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Correo Electrónico"
                    android:inputType="textEmailAddress"
                    android:textColorHint="#4A148C"
                    tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/iconodelapass"
                android:src="@drawable/iconpass" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contrase_a"
                    android:inputType="textPassword"
                    android:textColorHint="#1A237E"
                    tools:ignore="TouchTargetSizeCheck,TextContrastCheck">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/iniciosesion"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="@color/color_cafe_texto"
        android:fontFamily="@font/qafinte"
        android:onClick="iniciosesion"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/txt_olvideclave"
        android:layout_width="326dp"
        android:layout_height="25dp"
        android:fontFamily="@font/qafinte"
        android:gravity="center"
        android:onClick="olvideclave"
        android:text="@string/olvide_mi_contrase_a"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciosesion"
        app:layout_constraintVertical_bias="0.04"
        tools:ignore="TouchTargetSizeCheck" />

    <Button

        android:id="@+id/iniciar_con_google"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:paddingEnd="30dp"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/iconitogoogle"
        android:fontFamily="@font/qafinte"
        android:text="@string/iniciar_con_google"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_olvideclave"
        app:layout_constraintVertical_bias="0.24" />

    <Button
        android:id="@+id/ingresoFash"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/boton_redondo"
        android:backgroundTint="@color/color_fondo_end"
        android:fontFamily="@font/qafinte"
        android:onClick="ingresoFlash"
        android:text="Ingresar rápido"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_con_google"
        app:layout_constraintVertical_bias="0.378" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.422"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ingresoFash"
        app:layout_constraintVertical_bias="0.589">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="@font/qafinte"
            android:text="@string/a_n_no_te_registras"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/qafinte"
            android:onClick="registrarme"
            android:text="Registrate"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:textStyle="bold"
            tools:ignore="UsingOnClickInXml,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>